--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -H 0.0.0.0",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -30,7 +30,6 @@
     "@angular2-material/tooltip": "^2.0.0-alpha.8-2",
     "angular-in-memory-web-api": "^0.2.4",
     "bootstrap": "^4.0.0-alpha.5",
-    "bootstrap-material-design": "^0.5.10",
     "contentful": "^3.8.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
