--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "4.0.0-alpha.5",
     "contentful": "3.8.0",
     "core-js": "2.4.1",
+    "country-list": "^1.1.0",
     "express": "4.14.0",
     "hammerjs": "2.0.8",
     "rxjs": "5.0.1",
