--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular2-material/radio": "2.0.0-alpha.8-2",
     "@angular2-material/slider": "2.0.0-alpha.8-2",
     "@angular2-material/tooltip": "2.0.0-alpha.8-2",
-    "angular-cli": "1.0.0-beta.25.5",
+    "@angular/cli": "1.0.0-beta.30",
     "angular-in-memory-web-api": "0.2.4",
     "bootstrap": "4.0.0-alpha.5",
     "contentful": "3.8.0",
