--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.0.0-beta.30",
     "@angular/common": "2.3.1",
     "@angular/compiler": "2.3.1",
     "@angular/compiler-cli": "2.3.1",
@@ -31,7 +32,7 @@
     "@angular2-material/radio": "2.0.0-alpha.8-2",
     "@angular2-material/slider": "2.0.0-alpha.8-2",
     "@angular2-material/tooltip": "2.0.0-alpha.8-2",
-    "@angular/cli": "1.0.0-beta.30",
+    "@ngtools/webpack": "^1.2.4",
     "angular-in-memory-web-api": "0.2.4",
     "bootstrap": "4.0.0-alpha.5",
     "contentful": "3.8.0",
@@ -39,7 +40,8 @@
     "country-list": "^1.1.0",
     "express": "4.14.0",
     "hammerjs": "2.0.8",
-    "rxjs": "5.0.1",
+    "node-countries": "^1.3.1",
+    "rxjs": "^5.0.1",
     "ts-helpers": "1.1.1",
     "zone.js": "0.7.2"
   },
