--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "node-countries": "^1.3.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "1.1.1",
-    "zone.js": "0.7.2"
+    "zone.js": "0.7.2", 
+    "webpack": "2.2.1"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
