--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.0.0-beta.30",
+    "angular-cli": "1.0.0-beta.25.5",
     "@angular/common": "2.3.1",
     "@angular/compiler": "2.3.1",
     "@angular/compiler-cli": "2.3.1",
@@ -32,19 +32,18 @@
     "@angular2-material/radio": "2.0.0-alpha.8-2",
     "@angular2-material/slider": "2.0.0-alpha.8-2",
     "@angular2-material/tooltip": "2.0.0-alpha.8-2",
-    "@ngtools/webpack": "^1.2.4",
+    "@ngtools/webpack": "1.2.4",
     "angular-in-memory-web-api": "0.2.4",
     "bootstrap": "4.0.0-alpha.5",
     "contentful": "3.8.0",
     "core-js": "2.4.1",
-    "country-list": "^1.1.0",
+    "country-list": "1.1.0",
     "express": "4.14.0",
     "hammerjs": "2.0.8",
-    "node-countries": "^1.3.1",
-    "rxjs": "^5.0.1",
+    "node-countries": "1.3.1",
+    "rxjs": "5.0.1",
     "ts-helpers": "1.1.1",
-    "zone.js": "0.7.2", 
-    "webpack": "2.2.1"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
@@ -63,7 +62,7 @@
     "typescript": "~2.0.3"
   },
   "engines": {
-    "node": "6.9.4",
-    "npm": "3.10.10"
+    "node": "6.3.0",
+    "npm": "4.5.0"
   }
 }
