--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "angular-cli": "1.0.0-beta.25.5",
     "@angular/common": "2.3.1",
     "@angular/compiler": "2.3.1",
     "@angular/compiler-cli": "2.3.1",
@@ -33,6 +32,7 @@
     "@angular2-material/slider": "2.0.0-alpha.8-2",
     "@angular2-material/tooltip": "2.0.0-alpha.8-2",
     "@ngtools/webpack": "1.2.4",
+    "angular-cli": "1.0.0-beta.25.5",
     "angular-in-memory-web-api": "0.2.4",
     "bootstrap": "4.0.0-alpha.5",
     "contentful": "3.8.0",
@@ -40,6 +40,7 @@
     "country-list": "1.1.0",
     "express": "4.14.0",
     "hammerjs": "2.0.8",
+    "intl": "1.2.5",
     "node-countries": "1.3.1",
     "rxjs": "5.0.1",
     "ts-helpers": "1.1.1",
