--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular2-material/slider": "2.0.0-alpha.8-2",
     "@angular2-material/tooltip": "2.0.0-alpha.8-2",
     "@ngtools/webpack": "1.2.4",
+    "@types/lodash": "^4.14.62",
     "angular-cli": "1.0.0-beta.25.5",
     "angular-in-memory-web-api": "0.2.4",
     "bootstrap": "4.0.0-alpha.5",
@@ -41,6 +42,7 @@
     "express": "4.14.0",
     "hammerjs": "2.0.8",
     "intl": "1.2.5",
+    "lodash": "^4.17.4",
     "node-countries": "1.3.1",
     "rxjs": "5.0.1",
     "ts-helpers": "1.1.1",
